[#699] Fix card gap

--- a/frontend/src/modules/stakeholder-overview/styles.scss
+++ b/frontend/src/modules/stakeholder-overview/styles.scss
@@ -200,6 +200,10 @@
     .person-role {
       display: none;
     }
+    .ant-row {
+      gap: 34px;
+      flex-wrap: wrap;
+    }
   }
 
   .card-container {
@@ -211,13 +215,18 @@
     &.green {
       background-color: #45bea5;
     }
+    .ant-row {
+      gap: 34px;
+      flex-wrap: wrap;
+    }
   }
 
   .profile-card {
     width: 100%;
+    height: fit-content;
     max-width: 431px;
     border-radius: 10px;
-    margin: 0 34.12px 21.47px 0;
+    // margin: 0 34.12px 21.47px 0;
     // margin: 26px 34.12px 21.47px 29.12px;
     span {
       display: block;
@@ -225,6 +234,7 @@
 
     .profile-details {
       padding: 23px 16px 11px 25px;
+      flex-wrap: nowrap;
       img {
         width: 100%;
       }
@@ -296,7 +306,7 @@
               background-repeat: no-repeat;
               background-size: contain;
               background-position-y: center;
-              text-indent: -999px;
+              text-indent: -9999px;
             }
             .linkedin {
               background-image: url("../../images/stakeholder-overview/linkedin-icon.svg");
@@ -339,6 +349,7 @@
   }
 
   .sidebar {
+    background-color: $bg-dark-primary;
     .item-sidebar {
       width: 100%;
       height: 100px;
